--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=pedidos
 
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/pedidos?createDatabaseIfNotExist=true
+server.port=8083
+
+# Database configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pedidos?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
-
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-eureka.instance.instance-id = ${spring.application.name}:${random.int}
+# Eureka configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-server.port= 8082
+eureka.instance.prefer-ip-address=true
