--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>br.com.saboresconectados</groupId>
 		<artifactId>sabores-conectados</artifactId>
 		<version>1.0.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>br.com.saboresconectados</groupId>
 	<artifactId>pedidos</artifactId>
